--- a/index-my-version.html
+++ b/index-my-version.html
@@ -43,7 +43,8 @@
     </nav>
 
     <!-- Showcase -->
-    <section class="bg-dark text-light p-5 text-center text-sm-start">
+    <section
+        class="bg-dark text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
         <div class="container">
             <div class="d-sm-flex align-items-center justify-content-between">
                 <div>
@@ -53,15 +54,35 @@
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                         Fusce blandit luctus diam, vitae varius tellus placerat
                         et. Nam iaculis semper nulla, ut elementum metus
-                        pellentesque semper. Phasellus at fermentum justo.
-                        Curabitur nec hendrerit sapien.
+                        pellentesque semper.
                     </p>
-                    <button class="btn btn-primary btn-lg">Start The Enrollment</button>
+                    <button class="btn btn-primary btn-lg">Start The
+                        Enrollment</button>
                 </div>
-                <img class="img-fluid w-50 d-none d-sm-block" src="img/showcase.svg" alt="">
+                <img class="img-fluid w-50 d-none d-sm-block"
+                    src="img/showcase.svg" alt="">
             </div>
         </div>
     </section>
+
+    <!-- Newsletter -->
+
+    <section class="bg-primary text-light p-5">
+        <div class="container">
+            <div class="d-md-flex justify-content-between align-items-center">
+                <h3 class="mb-3 mb-md-0">Sign Up For Our Newsletter!</h3>
+
+                <div class="input-group news-input">
+                    <input type="text" class="form-control"
+                        placeholder="Enter Email">
+                    <button class="btn bg-dark text-light btn-lg" type="button"
+                        id="button-addon2">Button</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
