--- a/index-my-version.html
+++ b/index-my-version.html
@@ -20,7 +20,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
+  <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
     <div class="container">
       <a href="#" class="navbar-brand">Frontend Bootcamp</a>
 
@@ -198,7 +198,111 @@
     </div>
   </section>
 
+  <!-- Question Accordion -->
+  <section id="questions" class="p-5">
+    <div class="container">
+      <h2 class="text-center mb-4">Frequently Asked Questions</h2>
+      <div class="accordion accordion-flush" id="questions">
+        <!-- Item 1 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button"
+              data-bs-toggle="collapse" data-bs-target="#question-one">
+              Where exactly are you located?
+            </button>
+          </h2>
+          <div id="question-one" class="accordion-collapse collapse"
+            data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Amet modi ipsam laudantium. Voluptatem
+              cupiditate reiciendis distinctio dicta odit ad praesentium eveniet
+              incidunt perferendis, harum velit error consequuntur facilis ipsa
+              voluptates, nobis, sapiente illo dignissimos! Optio suscipit
+              nostrum aut asperiores maxime, sunt reprehenderit iste recusandae
+              eos labore esse excepturi animi quam.</div>
+          </div>
+        </div>
+        <!-- Item 2 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button"
+              data-bs-toggle="collapse" data-bs-target="#question-two">
+              How much does it cost to attend?
+            </button>
+          </h2>
+          <div id="question-two" class="accordion-collapse collapse"
+            data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Amet modi ipsam laudantium. Voluptatem
+              cupiditate reiciendis distinctio dicta odit ad praesentium eveniet
+              incidunt perferendis, harum velit error consequuntur facilis ipsa
+              voluptates, nobis, sapiente illo dignissimos! Optio suscipit
+              nostrum aut asperiores maxime, sunt reprehenderit iste recusandae
+              eos labore esse excepturi animi quam.</div>
+          </div>
+        </div>
+        <!-- Item 3 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button"
+              data-bs-toggle="collapse" data-bs-target="#question-three">
+              What do I need to know?
+            </button>
+          </h2>
+          <div id="question-three" class="accordion-collapse collapse"
+            data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Amet modi ipsam laudantium. Voluptatem
+              cupiditate reiciendis distinctio dicta odit ad praesentium eveniet
+              incidunt perferendis, harum velit error consequuntur facilis ipsa
+              voluptates, nobis, sapiente illo dignissimos! Optio suscipit
+              nostrum aut asperiores maxime, sunt reprehenderit iste recusandae
+              eos labore esse excepturi animi quam.</div>
+          </div>
+        </div>
+        <!-- Item 4 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button"
+              data-bs-toggle="collapse" data-bs-target="#question-four">
+              How do I sign up?
+            </button>
+          </h2>
+          <div id="question-four" class="accordion-collapse collapse"
+            data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Amet modi ipsam laudantium. Voluptatem
+              cupiditate reiciendis distinctio dicta odit ad praesentium eveniet
+              incidunt perferendis, harum velit error consequuntur facilis ipsa
+              voluptates, nobis, sapiente illo dignissimos! Optio suscipit
+              nostrum aut asperiores maxime, sunt reprehenderit iste recusandae
+              eos labore esse excepturi animi quam.</div>
+          </div>
+        </div>
+        <!-- Item 5 -->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button class="accordion-button collapsed" type="button"
+              data-bs-toggle="collapse" data-bs-target="#question-five">
+              Do you help me find a job?
+            </button>
+          </h2>
+          <div id="question-five" class="accordion-collapse collapse"
+            data-bs-parent="#questions">
+            <div class="accordion-body">Lorem ipsum, dolor sit amet consectetur
+              adipisicing elit. Amet modi ipsam laudantium. Voluptatem
+              cupiditate reiciendis distinctio dicta odit ad praesentium eveniet
+              incidunt perferendis, harum velit error consequuntur facilis ipsa
+              voluptates, nobis, sapiente illo dignissimos! Optio suscipit
+              nostrum aut asperiores maxime, sunt reprehenderit iste recusandae
+              eos labore esse excepturi animi quam.</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  
 
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
