--- a/index-my-version.html
+++ b/index-my-version.html
@@ -302,7 +302,74 @@
     </div>
   </section>
 
-  
+  <!-- Instructors -->
+  <section id="instructors" class="p-5 bg-primary">
+    <div class="container">
+      <h2 class="text-center text-white">Our Instructors</h2>
+      <p class="lead text-center text-white mb-5">
+        Our instructors all have 5+ years working as a web developer in the
+        industry.
+      </p>
+      <div class="row g-4">
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <h3 class="card-title mb-3">Courage</h3>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <h3 class="card-title mb-3">Courage</h3>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <h3 class="card-title mb-3">Courage</h3>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+          </div>
+        </div>
+        <div class="col-md-6 col-lg-3">
+          <div class="card bg-light">
+            <div class="card-body text-center">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <h3 class="card-title mb-3">Courage</h3>
+              <p class="card-text">Lorem ipsum dolor sit, amet consectetur
+                adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
+                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+              </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
