--- a/index-my-version.html
+++ b/index-my-version.html
@@ -6,15 +6,20 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bootstrap Practice Website</title>
+  <!-- Bootstrap css -->
   <link
     href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css"
     rel="stylesheet"
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We"
-    crossorigin="anonymous">
+    crossorigin="anonymous" />
+  <!-- Bootstrap icons css -->
   <link rel="stylesheet"
-    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
-
-  <link rel="stylesheet" href="style-my-version.css">
+    href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css" />
+  <!-- Mapbox css -->
+  <link href='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.css'
+    rel='stylesheet' />
+  <!-- My custom css -->
+  <link rel="stylesheet" href="style-my-version.css" />
 </head>
 
 <body>
@@ -314,67 +319,120 @@
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3"
+                alt="">
               <h3 class="card-title mb-3">Courage</h3>
               <p class="card-text">Lorem ipsum dolor sit, amet consectetur
                 adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-              </div>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3"
+                alt="">
               <h3 class="card-title mb-3">Courage</h3>
               <p class="card-text">Lorem ipsum dolor sit, amet consectetur
                 adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-              </div>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3"
+                alt="">
               <h3 class="card-title mb-3">Courage</h3>
               <p class="card-text">Lorem ipsum dolor sit, amet consectetur
                 adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-              </div>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
           </div>
         </div>
         <div class="col-md-6 col-lg-3">
           <div class="card bg-light">
             <div class="card-body text-center">
-              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3" alt="">
+              <img src="./courage.jpg" style="max-width: 100%;" class="mb-3"
+                alt="">
               <h3 class="card-title mb-3">Courage</h3>
               <p class="card-text">Lorem ipsum dolor sit, amet consectetur
                 adipisicing elit. Porro rerum, iure nobis enim eos deserunt?</p>
-                <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
-                <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
-              </div>
+              <a href="#"><i class="bi bi-twitter text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-facebook text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-linkedin text-dark mx-1"></i></a>
+              <a href="#"><i class="bi bi-instagram text-dark mx-1"></i></a>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </section>
 
+  <!-- Contact & Map -->
+  <section class="p-5">
+    <div class="container">
+      <div class="row g-4">
+        <div class="col-md">
+          <h2 class="text-center mb-4">Contact Info</h2>
+          <ul class="list-group list-group-flush lead">
+            <li class="list-group-item">
+              <span class="fw-bold">Main Location:</span> 50 Main St, Atlanta,
+              GA
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Phone:</span> 777-777-7777
+            </li>
+            <li class="list-group-item">
+              <span class="fw-bold">Email:</span> courage@the-cowardly-dog.com
+            </li>
+          </ul>
+        </div>
+        <div class="col-md">
+          <div id="map"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="p-5 bg-dark text-white text-center position-relative">
+    <div class="container">
+      <p class="lead">Copyright &copy; 2021 Frontend Bootcamp</p>
+      <a href="#" class="position-absolute bottom-0 end-0 p-5">
+        <i class="bi bi-arrow-up-circle h1"></i></a>
+    </div>
+  </footer>
+
+  <!-- Bootstrap script -->
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
     crossorigin="anonymous"></script>
+  <!-- Mapbox script 1 -->
+  <script
+    src='https://api.mapbox.com/mapbox-gl-js/v2.3.1/mapbox-gl.js'></script>
+  <!-- Mapbox script 2 -->
+  <script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiamVsbGlzMjEiLCJhIjoiY2t0NXp2NDI3MGRqYzJ1cWtwbG1sYWdrMSJ9.kaIBCEvh9v_LDa0d4FKoCg';
+    var map = new mapboxgl.Map({
+      container: 'map',
+      style: 'mapbox://styles/mapbox/streets-v11',
+      center: [-84.388819, 33.776191],
+      zoom: 18
+    });
+  </script>
 </body>
 
 </html>
